# EdgeNode

./: .gitignore  CMakeLists.txt  README.md
include/: edge_protocol_core.h
include/arduino/: edge_protocol.h
include/rpi/: edge_protocol.h  gpio.h  serial_comm.h
src/: main.cpp
src/arduino/: edge_protocol.cpp
src/gpio/: gpio.cpp  gpio.h
src/protocol/: protocol.cpp  protocol.h
src/rpi/: edge_protocol.cpp  gpio.cpp  serial_comm.cpp
